Project2/basePackage/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <label>Bid</label>
    <nameField>
        <displayFormat>BID-{0000}</displayFormat>
        <label>Bid ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>