Project2/basePackage/main/default/objects/Bid__c/fields/Auction__c.field-meta.xml
<CustomField>
    <fullName>Auction__c</fullName>
    <label>Auction</label>
    <referenceTo>Auction__c</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>